assets/css/colors.css
:root {
  /* color-scheme: light dark;*/

  /* INFO LAB colours need to be wrapped in lab() when referenced */

  /* --- lights --- */
  --color-light-1: rgb(255 255 255);
  --color-light-1-lab: 100% 0 0;
  --color-light-2: rgb(241 241 241);
  --color-light-2-lab: 95.65% 0 0;
  --color-light-3: rgb(221 221 221);
  --color-light-3-lab: 86.35% 0 0;
  --color-light-4: rgb(211 211 211);
  --color-light-4-lab: 83.35% 0 0;
  --color-light-5: rgb(190 190 190);
  --color-light-5-lab: 76.35% 0 0;
  /* --- darks --- */
  --color-black: rgb(0 0 0);
  --color-black-lab: 0% 0 0;
  --color-dark-1: rgb(38 42 47);
  --color-dark-1-lab: 15.02% -0.95 -7.36;
  --color-dark-2: rgb(46 50 56);
  --color-dark-2-lab: 20.23% -1.95 -9.54;
  --color-dark-3: rgb(68 76 85);
  --color-dark-3-lab: 31.27% -1.78 -7.79;
  --color-dark-4: rgb(82 91 102);
  --color-dark-4-lab: 37.58% -1.96 -8.63;
  --color-dark-5: rgb(113 118 124);
  --color-dark-5-lab: 46.31% -0.73 -5.33;
  --color-dark-6: rgb(147 161 164);
  /*--color-dark-6-lab: 46.31% -0.73 -5.33;*/

  /* --- highlight colours --- */
  /* ------------------------------------------------------------------  */
  /* --- blue --- */
  --color-hl-blue: rgb(96 156 208);
  --color-hl-blue-lab: lab(62.35 -4.66 -32.56);
  /* ---------------------------------------------------  */
  /* --- blue palette --- */
  --blue-base: var(--color-hl-blue-lab);

  --color-blue-0: oklch(from var(--blue-base) calc(l + 0.3) c h);
  --color-blue-1: oklch(from var(--blue-base) calc(l + 0.2) c h);
  --color-blue-2: oklch(from var(--blue-base) calc(l + 0.1) c h);
  --color-blue-3: var(--blue-base);
  --color-blue-4: oklch(from var(--blue-base) calc(l - 0.1) c h);
  --color-blue-5: oklch(from var(--blue-base) calc(l - 0.2) c h);
  --color-blue-6: oklch(from var(--blue-base) calc(l - 0.3) c h);

  --color-blue-contrast: oklch(from var(--blue-base) calc(l + 0.6) c h);
  --color-blue-complement: hsl(from var(--blue-base) calc(h + 180) s l);

  /* --- green --- */
  --color-hl-green: rgb(108 207 93);
  --color-hl-green-secondary: rgb(108 207 93 / 0.5);
  --color-hl-green-lab: lab(78.47 -39.34 34.94);
  --color-hl-green-bg: color-mix(
    in rgb,
    var(--color-hl-green) 30%,
    var(--color-bg-1)
  );
  --color-hl-green-bg-lab: color-mix(
    in lab,
    var(--color-hl-green-lab) 30%,
    var(--color-bg-1-lab)
  );
  /* ---------------------------------------------------  */
  /* --- green palette --- */
  --green-base: var(--color-hl-green-lab);

  --color-green-0: oklch(from var(--green-base) calc(l + 0.3) c h);
  --color-green-1: oklch(from var(--green-base) calc(l + 0.2) c h);
  --color-green-2: oklch(from var(--green-base) calc(l + 0.1) c h);
  --color-green-3: var(--green-base);
  --color-green-4: oklch(from var(--green-base) calc(l - 0.1) c h);
  --color-green-5: oklch(from var(--green-base) calc(l - 0.2) c h);
  --color-green-6: oklch(from var(--green-base) calc(l - 0.3) c h);

  --color-green-contrast: oklch(from var(--green-base) calc(l - 0.6) c h);
  --color-green-complement: hsl(from var(--green-base) calc(h + 180) s l);

  /* --- orange --- */
  --color-hl-orange: #d56f3e;
  --color-hl-orange-lab: lab(62.29 34.31 54.48);
  /* ---------------------------------------------------  */
  /* --- orange palette --- */
  --orange-base: var(--color-hl-orange-lab);

  --color-orange-0: oklch(from var(--orange-base) calc(l + 0.3) c h);
  --color-orange-1: oklch(from var(--orange-base) calc(l + 0.2) c h);
  --color-orange-2: oklch(from var(--orange-base) calc(l + 0.1) c h);
  --color-orange-3: var(--orange-base);
  --color-orange-4: oklch(from var(--orange-base) calc(l - 0.1) c h);
  --color-orange-5: oklch(from var(--orange-base) calc(l - 0.2) c h);
  --color-orange-6: oklch(from var(--orange-base) calc(l - 0.3) c h);

  --color-orange-contrast: oklch(from var(--orange) calc(l + 0.6) c h);
  --color-orange-complement: hsl(from var(--orange) calc(h + 180) s l);

  /* --- pink --- */
  --color-hl-pink: #ea4f92;
  --color-hl-pink-lab: lab(57.24 64.92 -3.64);
  --color-hl-pink-lab-faded: oklch(
    from var(--color-hl-pink-lab) calc(l * 1.95) calc(c * 1.9) h / 10%
  );
  --color-hl-pink-lab-faded-1: oklch(
    from var(--color-hl-pink-lab) calc(l * 1.95) calc(c * 1.5) h / 70%
  );
  --color-hl-pink-lab-vivid: oklch(
    from var(--color-hl-pink-lab) calc(l * 1.2) calc(c * 1.4) h
  );
  --color-hl-pink-bg: color-mix(
    in rgb,
    var(--color-hl-pink) 30%,
    var(--color-bg-1)
  );
  --color-hl-pink-bg-lab: color-mix(
    in lab,
    var(--color-hl-pink-lab) 30%,
    var(--color-bg-1-lab)
  );
  /* ---------------------------------------------------  */
  /* --- pink palette --- */
  --pink-base: var(--color-hl-pink-lab);

  --color-pink-0: oklch(from var(--pink-base) calc(l + 0.3) c h);
  --color-pink-1: oklch(from var(--pink-base) calc(l + 0.2) c h);
  --color-pink-2: oklch(from var(--pink-base) calc(l + 0.1) c h);
  --color-pink-3: var(--pink-base);
  --color-pink-4: oklch(from var(--pink-base) calc(l - 0.1) c h);
  --color-pink-5: oklch(from var(--pink-base) calc(l - 0.2) c h);
  --color-pink-6: oklch(from var(--pink-base) calc(l - 0.3) c h);

  --color-pink-contrast: oklch(from var(--pink) calc(l + 0.6) c h);
  --color-pink-complement: hsl(from var(--pink-base) calc(h + 180) s l);

  /* --- yellow --- */
  --color-hl-yellow: #e2c044;
  --color-hl-yellow-lab: lab(84.51 5.57 76.51);
  /* ---------------------------------------------------  */
  /* --- yellow palette --- */
  --yellow-base: var(--color-hl-yellow-lab);

  --color-yellow-0: oklch(from var(--yellow-base) calc(l + 0.3) c h);
  --color-yellow-1: oklch(from var(--yellow-base) calc(l + 0.2) c h);
  --color-yellow-2: oklch(from var(--yellow-base) calc(l + 0.1) c h);
  --color-yellow-3: var(--yellow-base);
  --color-yellow-4: oklch(from var(--yellow-base) calc(l - 0.1) c h);
  --color-yellow-5: oklch(from var(--yellow-base) calc(l - 0.2) c h);
  --color-yellow-6: oklch(from var(--yellow-base) calc(l - 0.3) c h);

  --color-yellow: oklch(from var(--yellow) calc(l + 0.6) c h);
  --color-yellow: hsl(from var(--yellow) calc(h + 180) s l);

  /* --- red --- */
  --color-hl-red: #f94243;
  --color-hl-red-lab: lab(51.65 83.45 51.15);
  --color-error: rgb(294 63 71);
  /* ---------------------------------------------------  */
  /* --- red palette --- */
  --red-base: var(--color-hl-red-lab);

  --color-red-0: oklch(from var(--red-base) calc(l + 0.3) c h);
  --color-red-1: oklch(from var(--red-base) calc(l + 0.2) c h);
  --color-red-2: oklch(from var(--red-base) calc(l + 0.1) c h);
  --color-red-3: var(--red-base);
  --color-red-4: oklch(from var(--red-base) calc(l - 0.1) c h);
  --color-red-5: oklch(from var(--red-base) calc(l - 0.2) c h);
  --color-red-6: oklch(from var(--red-base) calc(l - 0.3) c h);

  --color-red: oklch(from var(--red) calc(l + 0.6) c h);
  --color-red: hsl(from var(--red) calc(h + 180) s l);

  /* ------------------------ */
  /* dark / light mode colours */
  /* --- bg colours --- */
  --color-bg-1: light-dark(var(--color-light-5), var(--color-dark-1));
  --color-bg-1-lab: var(--color-dark-1-lab);
  --color-bg-2: light-dark(var(--color-light-4), var(--color-dark-2));
  --color-bg-2-lab: var(--color-dark-2-lab);
  --color-bg-3: light-dark(var(--color-light-3), var(--color-dark-3));
  --color-bg-3-lab: var(--color-dark-3-lab);
  --color-bg-4: light-dark(var(--color-light-2), var(--color-dark-4));
  --color-bg-4-lab: var(--color-dark-4-lab);
  --color-bg-5: light-dark(var(--color-light-1), var(--color-dark-5));
  --color-bg-5-lab: var(--color-dark-5-lab);
  /* --- text colours --- */
  --color-fg-1: light-dark(var(--color-dark-1), var(--color-light-1));
  --color-fg-1-lab: var(--color-light-1-lab);
  --color-fg-2: light-dark(var(--color-dark-2), var(--color-light-2));
  --color-fg-2-lab: var(--color-light-2-lab);
  --color-fg-3: light-dark(var(--color-dark-3), var(--color-light-3));
  --color-fg-3-lab: var(--color-light-3-lab);
  --color-fg-4: light-dark(var(--color-dark-4), var(--color-light-4));
  --color-fg-4-lab: var(--color-light-4-lab);
  --color-fg-5: light-dark(var(--color-dark-5), var(--color-light-5));
  --color-fg-5-lab: var(--color-light-5-lab);
  /* --- buttons etc -- */
  --color-hl-primary: light-dark(var(--color-hl-blue), var(--color-hl-green));
  --color-secondary-active: light-dark(
    var(--color-dark-2),
    var(--color-dark-6)
  );
  --color-secondary-hover: light-dark(var(--color-dark-4), var(--color-dark-5));
  --color-secondary-border: light-dark(
    var(--color-dark-5),
    var(--color-dark-3)
  );
  --color-secondary-border-hover: light-dark(
    var(--color-dark-3),
    var(--color-dark-4)
  );
  --color-btn-hl-l: red;
  --color-btn-hl-d: blue;
  --color-btn-shd-l: green;
  --color-btn-shd-d: yellow;
  --color-btn-hlt: light-dark(var(--color-btn-hl-l), var(--color-btn-hl-d));
  --color-btn-shd: light-dark(var(--color-btn-shd-l), var(--color-btn-shd-d));
  /* --- light mode --- */
  @media (prefers-color-scheme: light) {
    /* --- bg colours --- *!
    --color-bg-1 : var(--color-light-5);
    --color-bg-2 : var(--color-light-4);
    --color-bg-3 : var(--color-light-3);
    --color-bg-4 : var(--color-light-2);
    --color-bg-5 : var(--color-light-1);
    /* --- text colours --- *!
    --color-fg-1 : var(--color-dark-1);
    --color-fg-2 : var(--color-dark-2);
    --color-fg-3 : var(--color-dark-3);
    --color-fg-4 : var(--color-dark-4);
    --color-fg-5 : var(--color-dark-5); */
  }
  /* --- gradients --- */
  --grad-main: linear-gradient(
    0deg,
    hsl(112deg 50% 66%) 0%,
    hsl(102deg 42% 65%) 12%,
    hsl(90deg 34% 64%) 24%,
    hsl(74deg 27% 62%) 36%,
    hsl(52deg 25% 62%) 48%,
    hsl(33deg 30% 64%) 61%,
    hsl(19deg 35% 66%) 69%,
    hsl(6deg 40% 68%) 74%,
    hsl(355deg 47% 68%) 79%,
    hsl(348deg 56% 67%) 84%,
    hsl(342deg 64% 65%) 89%,
    hsl(338deg 72% 64%) 95%,
    hsl(334deg 79% 61%) 100%
  );
  --grad-main-rad: radial-gradient(
    in lab ellipse at 40% 80%,
    var(--color-hl-green-bg-lab) 30%,
    var(--color-hl-pink-bg-lab)
  );
}

/* --- codex colors --- */
.grid-welcome-logo-green {
  color: var(--color-hl-green-lab);
  text-shadow: var(--text-3d-green);
  width: 9.2rem;
}
.grid-welcome-logo-pink {
  color: var(--color-hl-pink-lab);
  text-shadow: var(--text-3d-pink);
}

